syntax = "proto3";
package pcbook;

import "proto/filter_message.proto";
import "proto/laptop_message.proto";

option go_package = "./;pcbook";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

message SearchLaptopRequest {
  Filter filter = 1;
}

message SearchLaptopResponse {
  Laptop laptop = 1;
}

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1; // the first request contains the meta data
    bytes chunk_data = 2; // the following requests will contain the chunks if data of the image
  }
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2;
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 2; // total size of the image uploaded
}

message RateLaptopRequest {
  string laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  string laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {}
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {}
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {}
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {}
}
